Melhorias no tamanho dos campos da tabela

--- a/calculadora.html
+++ b/calculadora.html
@@ -11,18 +11,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta content="width=device-width, initial-scale=1, user-scalable=0" name="viewport">
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="width" name="MobileOptimized">
 	<meta content="true" name="HandheldFriendly">
 
 </head>
 
 <style>
+
     .title {
-        font-family: 'Haettenschweiler';
+        font-family:'Fredoka One', cursive;
         color: brown;
         text-align: center;
+    }
+
+    .responsive {
+        width: 20vw;
+        height: auto;
     }
 
     .tabelaNotas {
@@ -66,7 +74,7 @@
         vertical-align: middle !important;
     }
 
-    .col-7, .col-8, .col-10 {
+    .col-7, .col-9, .col-10 {
         margin: auto; 
         vertical-align: middle;
     }
@@ -87,6 +95,7 @@
 
 	#headerTitle {
         margin-left: 1%;
+        margin-top: 1%;
         float: left;
         text-align: center;
         vertical-align: middle; 
@@ -98,18 +107,18 @@
     <header>
         <div id="headerDiv">
             <div id="logo">
-                <a href="http://www.ipg.pt/estg/ensino_licenciatura.aspx?id=4&curso=Engenharia%20Inform%C3%A1tica" target="_blank"><img alt="Logotipo IPG" src="imgs/logotipo_ipg.png"/></a>
+                <a href="http://www.ipg.pt/estg/ensino_licenciatura.aspx?id=4&curso=Engenharia%20Inform%C3%A1tica" target="_blank"><img alt="Logotipo IPG" class="responsive" src="imgs/logotipo_ipg.png"/></a>
             </div>
             <div id="headerTitle">
-                <h1 class="title" style="font-size: 60px;">CALCULADORA DE MÉDIA</h1>
+                <h1 class="title" style="font-size: 3.5vw;">CALCULADORA DE MÉDIA</h1>
             </div>
         </div>
     </header>
     <main>
         <p></p>
-        <h2 class="title">Preenche as tuas notas</h2>
+        <h2 class="title" style="font-size: 2vw;">Preenche as tuas notas</h2>
         <h6 id="infoTitle">Notas da Disciplina: (Nota de 0-20)</h6><br>
-        <div id="styleTable">
+        <div id="styleTable" class="table-responsive">
             <table class="table table-striped tabelaNotas">
                 <thead>
                     <tr>
@@ -126,22 +135,22 @@
                     <tr>
                         <th scope="row">Português</th>
                         <td>
-                            <div class="col-8">
+                            <div style="width: 130px;" class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-pt">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div style="width: 130px;" class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-pt">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div style="width: 130px;" class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-pt">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div style="width: 160px;" class="col-9">
                                 <input class="form-control" type="number" value="100" min="0" max="200"
                                     id="nota-exame-pt">
                             </div>
@@ -150,12 +159,12 @@
                     <tr>
                         <th scope="row">Filosofia</th>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-fil">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-fil">
                             </div>
                         </td>
@@ -163,7 +172,7 @@
 
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control" type="number" value="100" min="0" max="200"
                                     id="nota-exame-fil" readonly>
                                 <div class="form-check form-check-inline">
@@ -178,12 +187,12 @@
                     <tr>
                         <th scope="row">L. Estrangeira</th>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-le">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-le">
                             </div>
                         </td>
@@ -191,7 +200,7 @@
 
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control" type="number" value="100" min="0" max="200" id="nota-exame-le"
                                     readonly>
                                 <div class="form-check form-check-inline">
@@ -206,22 +215,22 @@
                     <tr>
                         <th scope="row">Matemática</th>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-mat">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-mat">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-mat">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control" type="number" value="100" min="0" max="200"
                                     id="nota-exame-mat">
                             </div>
@@ -230,17 +239,17 @@
                     <tr>
                         <th scope="row">E. Física</th>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-ef">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-ef">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-ef">
                             </div>
                         </td>
@@ -248,7 +257,7 @@
                     </tr>
                     <tr>
                         <th scope="row">
-                            <div class="col-10">
+                            <div style="width: 310px;" class="col-10">
                                 <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="selectListBienal1">
                                     <option selected>Bienal 1...</option>
                                     <option value="1">Física e Química A</option>
@@ -258,12 +267,12 @@
                             </div>
                         </th>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-bienal1">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-bienal1">
                             </div>
                         </td>
@@ -271,7 +280,7 @@
 
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control" type="number" value="100" min="0" max="200"
                                     id="nota-exame-bienal1" readonly>
                                 <div class="form-check form-check-inline">
@@ -295,12 +304,12 @@
                             </div>
                         </th>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-bienal2">
                             </div>
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-bienal2">
                             </div>
                         </td>
@@ -308,7 +317,7 @@
 
                         </td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control" type="number" value="100" min="0" max="200"
                                     id="nota-exame-bienal2" readonly>
                                 <div class="form-check form-check-inline">
@@ -336,7 +345,7 @@
                         <td></td>
                         <td></td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-op1">
                             </div>
                         </td>
@@ -365,7 +374,7 @@
                         <td></td>
                         <td></td>
                         <td>
-                            <div class="col-8">
+                            <div class="col-9">
                                 <input class="form-control notasCIF" type="number" value="10" min="0" max="20" id="nota-op2">
                             </div>
                         </td>
@@ -421,7 +430,7 @@
     </div>
 
     <br>
-    <footer style="text-align: center; background-color: rgba(160, 160, 160, 0.815); padding: 10px; margin: auto; font-family: sans-serif;">
+    <footer style="text-align: center; background-color: rgba(160, 160, 160, 0.815); padding: 10px; margin-bottom: 0px; font-family: sans-serif;">
         <i class="fa fa-envelope fa-lg"></i> <a href="mailto:cristianop.patricio@gmail.com" target="_blank">cristianop.patricio@gmail.com</a> &nbsp; &nbsp; &nbsp; <i class="fa fa-github fa-lg"></i> <a href="https://github.com/CristianoPatricio" target="_blank">github.com/CristianoPatricio</a> &nbsp; &nbsp; &nbsp; <i class="fa fa-linkedin fa-lg"></i> <a href="https://www.linkedin.com/in/cristiano-p-a7284a119/" target="_blank">Cristiano Patrício</a>  &nbsp; | &nbsp; <b>© 2019 CP</b>  - <em>WS JavaScript @ IPG 2019</em>
     </footer>
 
