--- a/calculadora.html
+++ b/calculadora.html
@@ -19,6 +19,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="width" name="MobileOptimized">
     <meta content="true" name="HandheldFriendly">
+    <!--File Saver-->
+    <script src="FileSaver.js"></script>
 </head>
 
 <style>
@@ -158,6 +160,11 @@
                             <div style="width: 160px;" class="col-9">
                                 <input class="form-control" type="number" value="100" min="0" max="200"
                                     id="nota-exame-pt">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input nota-exame-pt" type="checkbox" id="checkBtnPIPT"
+                                        value="option1">
+                                    <label class="form-check-label">P.I.?</label>
+                                </div>
                             </div>
                         </td>
                     </tr>
@@ -186,6 +193,11 @@
                                     <input class="form-check-input" type="checkbox" id="checkBtnFilosofia"
                                         value="option1">
                                     <label class="form-check-label">Exame?</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input nota-exame-fil" type="checkbox" id="checkBtnPIFil"
+                                        value="option1">
+                                    <label class="form-check-label">P.I.?</label>
                                 </div>
                             </div>
                         </td>
@@ -216,6 +228,11 @@
                                         value="option1">
                                     <label class="form-check-label">Exame?</label>
                                 </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input nota-exame-le" type="checkbox"
+                                        id="checkBtnPILEstrangeira" value="option1">
+                                    <label class="form-check-label">P.I.?</label>
+                                </div>
                             </div>
                         </td>
                     </tr>
@@ -243,6 +260,11 @@
                             <div class="col-9">
                                 <input class="form-control" type="number" value="100" min="0" max="200"
                                     id="nota-exame-mat">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input nota-exame-mat" type="checkbox" id="checkBtnPIMat"
+                                        value="option1">
+                                    <label class="form-check-label">P.I.?</label>
+                                </div>
                             </div>
                         </td>
                     </tr>
@@ -303,6 +325,11 @@
                                         value="option1">
                                     <label class="form-check-label">Exame?</label>
                                 </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input nota-exame-bienal1" type="checkbox"
+                                        id="checkBtnPIBienal1" value="option1">
+                                    <label class="form-check-label">P.I.?</label>
+                                </div>
                             </div>
                         </td>
                     </tr>
@@ -340,6 +367,11 @@
                                     <input class="form-check-input" type="checkbox" id="checkBtnBienal2"
                                         value="option1">
                                     <label class="form-check-label">Exame?</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input nota-exame-bienal2" type="checkbox"
+                                        id="checkBtnPIBienal2" value="option1">
+                                    <label class="form-check-label">P.I.?</label>
                                 </div>
                             </div>
                         </td>
@@ -399,6 +431,14 @@
                     </tr>
                 </tbody>
             </table>
+            <br>
+            <div style="margin-left: 5%; width: 70vw;" class="form-group row">
+                <div>
+                    <label><b>Peso das Provas de Ingresso (0-100) %</b></label>
+                    <input class="form-control col-4" id="perc-pi" type="number" value="50" min="0" max="100">
+                </div>
+            </div>
+            <br>
         </div>
     </main>
     <br>
@@ -432,7 +472,7 @@
                         style="color: brown; font-family: Haettenschweiler; font-size: 40px;"></span> valores!
                     <hr>
                     <b>Nota de Candidatura</b><br>
-                    <em>(Licenciatura em Engenharia Informática - IPG)</em><br>
+                    <!-- <em>(Licenciatura em Engenharia Informática - IPG)</em><br> -->
                     <center><span id="notaCandidatura"
                             style="color: brown; font-family: Haettenschweiler; font-size: 40px;"></span> valores!
                     </center>
@@ -440,7 +480,8 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-success" data-dismiss="modal">Ok</button>
+                    <button type="button" class="btn btn-info" onclick="saveResultados()"><i class="fa fa-save fa-lg"></i>Guardar</button>
+                    <button type="button" class="btn btn-success" data-dismiss="modal"><i class="fa fa-check fa-lg"></i>Ok</button>
                 </div>
 
             </div>
@@ -465,23 +506,33 @@
         showInputNumberExam("nota-exame-bienal2", "checkBtnBienal2");
 
         // Ação Botão Calcular
+        var mediaFinal = 0;
+        var notaCandidatura = 0;
+
         var $btnCalcular = document.querySelector("#btnCalcular");
 
         $btnCalcular.addEventListener('click', function () {
             var $spanMediaFinal = document.querySelector("#mediaFinal");
             var $spanNotaCandidatura = document.querySelector("#notaCandidatura");
-            var notaMatA = document.querySelector("#nota-exame-mat").value;
+            var pesoProvasIngresso = document.querySelector("#perc-pi").value / 100;
+            var pesoMediaFinal = 1 - pesoProvasIngresso;
 
             // Se os campos estiverem validados
-            if (validaCampos()){
-                var mediaFinal = (calcularMediaFinal()).toFixed(2);
-                var notaCandidatura = ((mediaFinal * 0.65) + ((notaMatA / 10) * 0.35)).toFixed(2);
+            if (validaCampos()) {
+                mediaFinal = (calcularMediaFinal()).toFixed(2);
 
-                $spanMediaFinal.textContent = mediaFinal;
-                $spanNotaCandidatura.textContent = notaCandidatura;
+                //var notaCandidatura = ((mediaFinal * 0.65) + ((notaMatA / 10) * 0.35)).toFixed(2);
+                if (getProvasIngresso() == 0) {
+                    alert("Tem de selecionar pelo menos uma prova de ingresso!");
+                } else {
+                    notaCandidatura = notaFinalCandidatura(mediaFinal, getProvasIngresso(), pesoMediaFinal, pesoProvasIngresso);
 
-                // Mostrar resultados no modal
-                $('#myModal').modal();
+                    $spanMediaFinal.textContent = mediaFinal;
+                    $spanNotaCandidatura.textContent = notaCandidatura;
+
+                    // Mostrar resultados no modal
+                    $('#myModal').modal();
+                }
             } else {
                 // Sair da função
                 return;
@@ -505,8 +556,70 @@
             });
         });
 
+        /*
+        * Guarda os resultados num ficheiro .txt 
+        */
+        function saveResultados(){
+            var resultados = "##Resultados##\r\n>>A sua média final é de "+mediaFinal+" valores.\r\n>>Nota de Candidatura: "+notaCandidatura+" valores.\r\n";
+            resultados += "\r\n****Resultados gerados por Calculadora Média Final Secundário © CP 2019****"
+            var blob = new Blob([resultados], {type: "text/plain;charset=utf-8"});
+            saveAs(blob, "notacandidatura.txt");
+        }
+
+        /** 
+         * Coloca num array as notas dos exames que tiverem na checkbox P.I. um check  
+         *
+         * @return {array} com as notas dos exames que
+         */
+        function getProvasIngresso() {
+            var $piInputs = document.querySelectorAll("[id*='checkBtnPI']");
+            var piArray = new Array();
+
+            $piInputs.forEach(function (input) {
+                if (input.checked) {
+                    var $inputNotaExame = document.querySelector("[id*='" + input.className.split(' ')[1] +
+                        "']");
+                    piArray.push(getNotaExame($inputNotaExame.id));
+                }
+            });
+
+            if (piArray === null) {
+                return 0;
+            } else {
+                return piArray;
+            }
+        }
+
+        /** 
+         * Cálculo da nota final de candidatura através da fórmula: 
+         * nota = (mediaSecundario * percMediaSecundario + media([provasIngresso]) * percProvasIngresso
+         *
+         * @param {float} : mediaSecundario
+         * @param {array} : provasIngresso
+         * @param {float} : percMediaSecundario
+         * @param {float} : percProvasIngresso
+         *
+         * @return {float} : nota final de candidatura com precisão de duas casas decimais.
+         */
+        function notaFinalCandidatura(mediaSecundario, provasIngresso, percMediaSecundario, percProvasIngresso) {
+            return (mediaSecundario * percMediaSecundario + (calcularMedia(provasIngresso) * percProvasIngresso))
+                .toFixed(2);
+        }
+
+        /**
+         * Devolve a nota de exame de 0-20
+         *
+         * @param {string} idCampo : identificador do campo input que contém a nota do exame
+         *
+         * @return {float} : nota do exame (0.0-20.0)
+         */
+        function getNotaExame(idCampo) {
+            return document.querySelector("#" + idCampo).value / 10;
+        }
+
         /**
          * @param {array} arr : array com as notas 
+         *
          * @return média
          */
         function calcularMedia(arr) {
@@ -606,7 +719,7 @@
             // Cálculo CIF
             mediaCIF = calcularMedia(arrNotas);
             // Debug
-            console.log("Média CIF: " + mediaCIF);
+            //console.log("Média CIF: " + mediaCIF);
 
             // Existe um check button associado ao campo da nota do Exame Nacional?
             if (checkBtn === 0) { //Não
@@ -617,7 +730,7 @@
 
                 if (chkBtn.checked === true) {
                     // Debug
-                    console.log("botão check!");
+                    //console.log("botão check!");
                     notaFinal = (mediaCIF * 0.7) + ((notaExame / 10) * 0.3);
                 } else {
                     notaFinal = mediaCIF;
@@ -625,7 +738,7 @@
             }
 
             // Debug
-            console.log("Nota Final: " + notaFinal);
+            //console.log("Nota Final: " + notaFinal);
 
             return notaFinal;
 
@@ -683,6 +796,7 @@
             var validados = true;
             var mensagemExame = false;
             var mensagemDisc = false;
+            var mensagemPesoPI = false;
             var campoNulo = false;
 
             var $notasExames = document.querySelectorAll("[id^='nota-exame']");
@@ -694,7 +808,7 @@
                     // mensagem
                     mensagemExame = true;
                     validados = false;
-                } else if (nota.value === ""){
+                } else if (nota.value === "") {
                     // definir background avermelhado
                     nota.style.backgroundColor = "rgba(165, 42, 42, 0.473)";
                     // mensagem
@@ -716,7 +830,7 @@
                     // mensagem
                     mensagemDisc = true;
                     validados = false;
-                } else if (nota.value === ""){
+                } else if (nota.value === "") {
                     // definir background avermelhado
                     nota.style.backgroundColor = "rgba(165, 42, 42, 0.473)";
                     // mensagem
@@ -725,11 +839,23 @@
                 }
             });
 
+            var $pesoPI = document.querySelector("#perc-pi");
+
+            if ($pesoPI.value < 0 || $pesoPI > 100) {
+                validados = false;
+                $pesoPI.style.backgroundColor = "rgba(165, 42, 42, 0.473)";
+                mensagemPesoPI = true;
+            }
+
+            if (mensagemPesoPI) {
+                alert("Atenção! O valor do peso das provas de ingresso deve ser entre 0 e 100.");
+            }
+
             if (mensagemDisc) {
                 alert("Deve inserir valores entre 0 e 20 na nota interna da disciplina!");
             }
 
-            if (campoNulo){
+            if (campoNulo === true) {
                 alert("Atenção! Todos os campos são de preenchimento obrigatório. Não pode haver campos vazios.");
             }
 
